--- a/defaults/main.yml
+++ b/defaults/main.yml
@@ -1,6 +1,27 @@
 ---
 # defaults file for rhv4_rhvh_vpp
-
+var_account_disable_post_pw_expiration: '35'
+var_accounts_minimum_age_login_defs: '7'
+var_accounts_maximum_age_login_defs: '60'
+var_accounts_passwords_pam_faillock_unlock_time: '0'
+var_accounts_passwords_pam_faillock_deny: '3'
+var_accounts_passwords_pam_faillock_fail_interval: '900'
+var_password_pam_unix_remember: '5'
+var_password_pam_ocredit: '-1'
+var_password_pam_difok: '8'
+var_password_pam_maxclassrepeat: '4'
+var_password_pam_lcredit: '-1'
+var_password_pam_maxrepeat: '3'
+var_password_pam_minlen: '15'
+var_password_pam_dcredit: '-1'
+var_password_pam_ucredit: '-1'
+var_smartcard_drivers: cac
+var_selinux_policy_name: targeted
+var_selinux_state: enforcing
+var_fips_mode: 'true'
+sshd_approved_macs: hmac-sha2-512,hmac-sha2-256,hmac-sha1,hmac-sha1-etm@openssh.com,hmac-sha2-256-etm@openssh.com,hmac-sha2-512-etm@openssh.com
+sshd_idle_timeout_value: '300'
+var_sshd_set_keepalive: '0'
 account_disable_post_pw_expiration: true
 accounts_maximum_age_login_defs: true
 accounts_minimum_age_login_defs: true
@@ -39,7 +60,6 @@ audit_rules_file_deletion_events_renameat: true
 audit_rules_file_deletion_events_rmdir: true
 audit_rules_file_deletion_events_unlink: true
 audit_rules_file_deletion_events_unlinkat: true
-audit_rules_kernel_module_loading_create: true
 audit_rules_kernel_module_loading_delete: true
 audit_rules_kernel_module_loading_finit: true
 audit_rules_kernel_module_loading_init: true
@@ -88,7 +108,9 @@ ensure_redhat_gpgkey_installed: true
 file_permissions_sshd_private_key: true
 file_permissions_sshd_pub_key: true
 force_opensc_card_drivers: true
+grub2_audit_argument: true
 grub2_disable_interactive_boot: true
+grub2_enable_fips_mode: true
 grub2_enable_selinux: true
 high_complexity: true
 high_severity: true
@@ -104,6 +126,7 @@ no_empty_passwords: true
 no_reboot_needed: true
 package_opensc_installed: true
 reboot_required: true
+require_singleuser_auth: true
 restrict_serial_port_logins: true
 restrict_strategy: true
 rpm_verify_hashes: true
@@ -123,16 +146,15 @@ sshd_disable_compression: true
 sshd_disable_empty_passwords: true
 sshd_disable_gssapi_auth: true
 sshd_disable_kerb_auth: true
-sshd_disable_rhosts: true
 sshd_disable_rhosts_rsa: true
 sshd_disable_root_login: true
-sshd_disable_user_known_hosts: true
 sshd_do_not_permit_user_env: true
 sshd_enable_strictmodes: true
 sshd_enable_warning_banner: true
 sshd_print_last_log: true
 sshd_set_idle_timeout: true
 sshd_set_keepalive: true
+sshd_set_loglevel_info: true
 sshd_use_approved_ciphers: true
 sshd_use_approved_macs: true
 sshd_use_priv_separation: true
