--- a/vars/main.yml
+++ b/vars/main.yml
@@ -1,22 +1,2 @@
-var_fips_mode: 'true'
-var_selinux_state: enforcing
-var_selinux_policy_name: targeted
-var_smartcard_drivers: cac
-var_accounts_passwords_pam_faillock_unlock_time: never
-var_accounts_passwords_pam_faillock_fail_interval: '900'
-var_password_pam_unix_remember: '5'
-var_accounts_passwords_pam_faillock_deny: '3'
-var_password_pam_ocredit: '-1'
-var_password_pam_lcredit: '-1'
-var_password_pam_difok: '8'
-var_password_pam_dcredit: '-1'
-var_password_pam_maxrepeat: '3'
-var_password_pam_maxclassrepeat: '4'
-var_password_pam_minlen: '15'
-var_password_pam_ucredit: '-1'
-var_account_disable_post_pw_expiration: '35'
-var_accounts_maximum_age_login_defs: '60'
-var_accounts_minimum_age_login_defs: '7'
-sshd_idle_timeout_value: '300'
-var_sshd_set_keepalive: '0'
-sshd_approved_macs: hmac-sha2-512,hmac-sha2-256,hmac-sha1,hmac-sha1-etm@openssh.com,hmac-sha2-256-etm@openssh.com,hmac-sha2-512-etm@openssh.com
+---
+# defaults file for rhv4_rhvh_vpp
